@@ -1,3 +1,10 @@
+Wed Feb 28 21:57:24 GMT 2007  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (pipeline_start): Don't ignore SIGPIPE in
+	  subprocesses; this has undesirable consequences in some
+	  situations.
+	  (pipeline_wait): Flatten SIGPIPE exit statuses to zero instead.
+
 Tue Feb 27 20:58:31 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	* lib/pipeline.c (pipeline_start): Save previous value of SIGQUIT
